fix scrollbar

--- a/whats-smart-filters/src/index.css
+++ b/whats-smart-filters/src/index.css
@@ -46,22 +46,15 @@ a:hover {
   color: #535bf2;
 }
 
-/* body {
+html,
+body {
+  margin: 0 !important;
+  padding: 0 !important;
+  height: 100%;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  flex-direction: column;
-  flex: 1;
-  } */
-  
-  html, body {
-    margin: 0 !important;
-    padding: 0 !important;
-    height: 100%;
-    display: flex;
-    width: 100%;
-    height: 100%;
-    background-color: var(--bg3);
+  width: 100%;
+  height: 100%;
+  background-color: var(--bg3);
 }
 
 h1 {
@@ -102,7 +95,25 @@ hr {
   }
 }
 
+::-webkit-scrollbar {
+  width: 4px;
+}
 
+::-webkit-scrollbar-thumb {
+  background: var(--bg2);
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--green-4);
+}
+
+::-webkit-scrollbar-thumb:active {
+  background: var(--green-3);
+}
 
 .pointer {
   cursor: pointer;
